--- a/src/app/styles/sidebar.module.css
+++ b/src/app/styles/sidebar.module.css
@@ -2,7 +2,7 @@
 .sidebar {
   width: 220px;
   height: 100vh;
-  background: linear-gradient(180deg, #0B8ADD 80%, #0872b9 100%);
+ background: linear-gradient(0deg, #0872b9 0%, #0B8ADD 80%);
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -12,12 +12,11 @@
   top: 0;
   left: 0;
   z-index: 200; /* aumente para garantir que fique acima da topbar */
-  border-right: 1px solid #e5e7eb; /* divisória fina à direita */
 }
 
 /* Container da logo */
 .logoContainer {
-  width: 100%;
+  width: 97%;
   height: 120px;
   display: flex;
   justify-content: center;
