--- a/src/app/styles/contasPagarReceber.module.css
+++ b/src/app/styles/contasPagarReceber.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   height: 90vh;
-  max-width: 1600px;      /* Aumenta a largura máxima */
+  max-width: 1200px;      /* Aumenta a largura máxima */
   margin: 40px auto;
   background: #fff;
   border-radius: 12px;
@@ -384,5 +384,17 @@
   min-width: 440px;
   max-width: 600px;
   box-shadow: 0 2px 12px 0 rgba(22,33,62,0.07);
+  display: flex;
+  flex-direction: column;
+  height: 80vh; /* ou ajuste conforme necessário */
+  max-height: 90vh;
+}
+
+.agendaSidebar ul {
+  flex: 1 1 auto;
+  overflow-y: auto;
+  max-height: 50vh; /* ajuste conforme o espaço desejado */
+  margin-bottom: 12px;
+  padding-right: 6px; /* espaço para scrollbar */
 }
 
